--- a/gb/21/7/3/n13065253.md
+++ b/gb/21/7/3/n13065253.md
@@ -1,18 +1,18 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/arvtrn3389/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/arvtrn3389/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/arvtrn3389/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/arvtrn3389/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/arvtrn3389/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/arvtrn3389/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/arvtrn3389/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/arvtrn3389/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/arvtrn3389/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/arvtrn3389/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/arvtrn3389/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/arvtrn3389/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/arvtrn3389/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/arvtrn3389/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/arvtrn3389/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/arvtrn3389/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/arvtrn3389/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/arvtrn3389/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/arvtrn3389/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/arvtrn3389/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/arvtrn3389/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/arvtrn3389/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/arvtrn3389/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/arvtrn3389/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/arvtrn3389/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/arvtrn3389/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/arvtrn3389/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/arvtrn3389/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/arvtrn3389/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/arvtrn3389/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/arvtrn3389/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/arvtrn3389/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/arvtrn3389/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/arvtrn3389/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/arvtrn3389/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/arvtrn3389/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/arvtrn3389/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/arvtrn3389/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/arvtrn3389/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/arvtrn3389/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/arvtrn3389/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/arvtrn3389/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/arvtrn3389/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/arvtrn3389/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/arvtrn3389/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/arvtrn3389/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/arvtrn3389/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/yirpaj3429/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/yirpaj3429/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/yirpaj3429/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/yirpaj3429/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/yirpaj3429/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/yirpaj3429/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/yirpaj3429/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/yirpaj3429/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/yirpaj3429/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/yirpaj3429/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/yirpaj3429/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/yirpaj3429/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/yirpaj3429/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/yirpaj3429/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/yirpaj3429/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/yirpaj3429/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/yirpaj3429/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/yirpaj3429/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/yirpaj3429/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/yirpaj3429/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/yirpaj3429/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/yirpaj3429/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/yirpaj3429/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/yirpaj3429/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/yirpaj3429/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/yirpaj3429/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/yirpaj3429/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/yirpaj3429/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/yirpaj3429/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/yirpaj3429/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/yirpaj3429/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/yirpaj3429/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/yirpaj3429/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/yirpaj3429/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/yirpaj3429/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/yirpaj3429/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/yirpaj3429/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/yirpaj3429/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/yirpaj3429/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/yirpaj3429/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/yirpaj3429/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/yirpaj3429/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/yirpaj3429/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/yirpaj3429/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/yirpaj3429/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/yirpaj3429/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/yirpaj3429/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>【名家专栏】中共精心策划的谎言和收买</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2021/07/id13065257-Health-employee-doctor-holding-medical-face-mask-with-WHO-World-Health-Organization-flag.-Coronavirus-COVID-19-700x420-600x400.jpg" />
 <h6>一名医生手拿印有世界卫生组织（WHO）旗帜的医用口罩。(kcube-Baytur/Shutterstock)
 </h6>
 <hr>
-	<p>【大纪元2021年07月03日讯】（大纪元专栏记者Austin Bay撰文／云川编译）<ahref="https://github.com/arvtrn3389/djy/blob/master/gb/tag/%E4%B8%AD%E5%85%B1.md#1">中共</a>很擅长私底下结交讨好国际政治人物、官僚主义者和舆论领袖，然后在威胁中共利益的问题出现时，暗中利用他们的影响力压制批评或拖延回应的时间。</p>
-<p>被<ahref="https://github.com/arvtrn3389/djy/blob/master/gb/tag/%E4%B8%AD%E5%85%B1.md#1">中共</a>收买替中共说话的例子里贻害最深的是，<ahref="https://github.com/arvtrn3389/djy/blob/master/gb/tag/%E4%B8%96%E7%95%8C%E5%8D%AB%E7%94%9F%E7%BB%84%E7%BB%87.md#1">世界卫生组织</a>（World Health Organization，WHO）在2020年1月和2月未能要求北京对中国爆发的COVID-19（中共病毒）/武汉病毒疫情提供全面准确的说明，包括病毒来源。相反，世卫组织一边大谈医学常识，一边听任了中共的逃避责任（谎言）。</p>
+	<p>【大纪元2021年07月03日讯】（大纪元专栏记者Austin Bay撰文／云川编译）<ahref="https://github.com/yirpaj3429/djy/blob/master/gb/tag/%E4%B8%AD%E5%85%B1.md#1">中共</a>很擅长私底下结交讨好国际政治人物、官僚主义者和舆论领袖，然后在威胁中共利益的问题出现时，暗中利用他们的影响力压制批评或拖延回应的时间。</p>
+<p>被<ahref="https://github.com/yirpaj3429/djy/blob/master/gb/tag/%E4%B8%AD%E5%85%B1.md#1">中共</a>收买替中共说话的例子里贻害最深的是，<ahref="https://github.com/yirpaj3429/djy/blob/master/gb/tag/%E4%B8%96%E7%95%8C%E5%8D%AB%E7%94%9F%E7%BB%84%E7%BB%87.md#1">世界卫生组织</a>（World Health Organization，WHO）在2020年1月和2月未能要求北京对中国爆发的COVID-19（中共病毒）/武汉病毒疫情提供全面准确的说明，包括病毒来源。相反，世卫组织一边大谈医学常识，一边听任了中共的逃避责任（谎言）。</p>
 <p>中共通过“精英俘获”（Elite Capture，是一种腐败形式，公共资源偏向于少数社会地位较高的个人，却损害了大多数人的福利）的策略，即资助世卫组织官员的“调查旅程”来投其所好并笼络人心。北京与世卫组织总干事谭德塞（Tedros Adhanom Ghebreyesus）建立了密切的关系，并支持对他的任命，尽管他并非学医出身。2020年1月下旬，谭德塞还在赞扬“中共对透明度的承诺”。</p>
 <p>中共对世卫组织的收买使其有时间转移责任，冷血地任由瘟疫蔓延全球，这样一来中国百姓就不是唯一的受害者了。</p>
 <p>华盛顿特区正在上演一台戏，台上是中共显示影响力的公开活动，台下则是中共的暗箱操作。他们大张旗鼓的行为给了我们机会做两件事：第一，制止公开活动并严惩中共；第二，揭露中共实施 “影响力”的广泛程度和全面性。</p>
-<p>6月25日，《华盛顿邮报》（Washington Post）报导，中国科技公司<ahref="https://github.com/arvtrn3389/djy/blob/master/gb/tag/%E6%B5%B7%E5%BA%B7%E5%A8%81%E8%A7%86.md#1">海康威视</a>（Hikvision）聘用了华盛顿“著名”游说公司——水星公共事务所（Mercury Public Affairs）。海康威视将聘请美国前民主党众议员托比?莫菲特（Toby Moffett）、前参议员大卫?维特（David Vitter）和他们的员工 “与国务院、财政部和商务部的成员接触”，并解决令海康威视担忧的“与《国防授权法案》（National Defense Authorization Act）有关的问题”。</p>
-<figure id="attachment_13065268" aria-describedby="caption-attachment-13065268" style="width: 600px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2021/07/id13065268-GettyImages-1145806285-1200x800-600x400.jpg" target="_blank" rel="noreferrer noopener"> <img class="size-large wp-image-13065268" src="https://i.epochtimes.com/assets/uploads/2021/07/id13065268-GettyImages-1145806285-1200x800-600x400.jpg" alt="" width="600" b="400" /></a><figcaption id="caption-attachment-13065268" class="wp-caption-text">2019年5月24日，北京一家电子商场里的<ahref="https://github.com/arvtrn3389/djy/blob/master/gb/tag/%E6%B5%B7%E5%BA%B7%E5%A8%81%E8%A7%86.md#1">海康威视</a>摄像头。(Fred Dufour/AFP via Getty Images)</figcaption></figure>
+<p>6月25日，《华盛顿邮报》（Washington Post）报导，中国科技公司<ahref="https://github.com/yirpaj3429/djy/blob/master/gb/tag/%E6%B5%B7%E5%BA%B7%E5%A8%81%E8%A7%86.md#1">海康威视</a>（Hikvision）聘用了华盛顿“著名”游说公司——水星公共事务所（Mercury Public Affairs）。海康威视将聘请美国前民主党众议员托比?莫菲特（Toby Moffett）、前参议员大卫?维特（David Vitter）和他们的员工 “与国务院、财政部和商务部的成员接触”，并解决令海康威视担忧的“与《国防授权法案》（National Defense Authorization Act）有关的问题”。</p>
+<figure id="attachment_13065268" aria-describedby="caption-attachment-13065268" style="width: 600px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2021/07/id13065268-GettyImages-1145806285-1200x800-600x400.jpg" target="_blank" rel="noreferrer noopener"> <img class="size-large wp-image-13065268" src="https://i.epochtimes.com/assets/uploads/2021/07/id13065268-GettyImages-1145806285-1200x800-600x400.jpg" alt="" width="600" b="400" /></a><figcaption id="caption-attachment-13065268" class="wp-caption-text">2019年5月24日，北京一家电子商场里的<ahref="https://github.com/yirpaj3429/djy/blob/master/gb/tag/%E6%B5%B7%E5%BA%B7%E5%A8%81%E8%A7%86.md#1">海康威视</a>摄像头。(Fred Dufour/AFP via Getty Images)</figcaption></figure>
 <p>在华盛顿特区游说就像在拉斯维加斯赌博，是为大人物赚大钱的大买卖，但通常买单的都是像维加斯的小赌徒或美国纳税人这样的小人物。</p>
 <p>海康威视之所以公开高薪聘请权势显赫和人脉广泛的政界人物，是因为美国政府正在严厉打击其有高度嫌疑的业务。</p>
 <p>美国严查海康威视的原因有以下几个：</p>
@@ -33,47 +33,47 @@
 <p><em>作者简介：</em></p>
 <p><em>奥斯汀?贝（Austin Bay）是美国退役陆军预备役上校、作家、辛迪加专栏作家，以及德克萨斯大学奥斯汀分校（University of Texas-Austin）的战略和战略理论教师。他的最新著作是《来自地狱的鸡尾酒：影响21世纪的五场战争》（Cocktails from Hell: Five Wars Shaping the 21st Century）。</em></p>
 <p><em>本文只代表作者观点，不代表《大纪元时报》的立场。</em></p>
-<p>责任编辑：高静#</p>
+<p>责任编辑：高静#◇</p>
 	
 <hr>
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/arvtrn3389/djy/blob/master/gb/21/5/14/n12950644.md#1">【名家专栏】中共疫苗外交的风险</a></li>
-<li><a href="https://github.com/arvtrn3389/djy/blob/master/gb/21/6/15/n13023667.md#1">【名家专栏】中共要为疫情付出代价</a></li>
-<li><a href="https://github.com/arvtrn3389/djy/blob/master/gb/21/6/24/n13044901.md#1">【名家专栏】中共已成世界之敌而非竞争者</a></li>
-<li><a href="https://github.com/arvtrn3389/djy/blob/master/gb/21/7/2/n13062268.md#1">【名家专栏】中共百年：饥荒、战争和镇压</a></li>
+<li><a href="https://github.com/yirpaj3429/djy/blob/master/gb/21/5/14/n12950644.md#1">【名家专栏】中共疫苗外交的风险</a></li>
+<li><a href="https://github.com/yirpaj3429/djy/blob/master/gb/21/6/15/n13023667.md#1">【名家专栏】中共要为疫情付出代价</a></li>
+<li><a href="https://github.com/yirpaj3429/djy/blob/master/gb/21/6/24/n13044901.md#1">【名家专栏】中共已成世界之敌而非竞争者</a></li>
+<li><a href="https://github.com/yirpaj3429/djy/blob/master/gb/21/7/2/n13062268.md#1">【名家专栏】中共百年：饥荒、战争和镇压</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/arvtrn3389/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank">中共的伪火骗局</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/2/1/n10107668.md#1" target="_blank">林辉：导演陈凯歌对父亲终生的愧疚</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/12/11/10/n3726603.md#1" target="_blank">【历史回顾】羊城晚报：老少皆炼法轮功</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank">人心向善 大陆当初盛况</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/4/7/n11169990.md#1" target="_blank">共产暴政录：老挝华人共产前后的处境变化</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/3/29/n10261439.md#1" target="_blank">从死神手里夺回来的生命</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/arvtrn3389/djy/blob/master/gb/21/6/28/n13052640.md#1">自称预见中共肺炎肆虐 英国灵媒曝来年大事</a></li>
-<li><a href="https://github.com/arvtrn3389/djy/blob/master/gb/21/6/16/n13026118.md#1">【忽必烈传】伯颜南伐势如破竹 南宋灭亡</a></li>
-<li><a href="https://github.com/arvtrn3389/djy/blob/master/gb/21/6/29/n13056430.md#1">【未解之谜】“奋战50年”揭密UFO</a></li>
-<li><a href="https://github.com/arvtrn3389/djy/blob/master/gb/21/6/25/n13048316.md#1">【未解之谜】海市蜃楼 亦真亦幻</a></li>
-<li><a href="https://github.com/arvtrn3389/djy/blob/master/gb/21/6/28/n13053550.md#1">【馨香雅句】雍正十二美人图  皇家仕女人文生活</a></li>
-<li><a href="https://github.com/arvtrn3389/djy/blob/master/gb/21/7/2/n13063233.md#1">【拍案惊奇】习天安门喊统一 胡锦涛一脸茫然</a></li>
-<li><a href="https://github.com/arvtrn3389/djy/blob/master/gb/21/7/2/n13064269.md#1">【远见快评】泄中共危机？习讲话美军强烈回应</a></li>
-<li><a href="https://github.com/arvtrn3389/djy/blob/master/gb/21/7/2/n13063847.md#1">【财商天下】供销社死灰复燃 习要“备战备荒”？</a></li>
-<li><a href="https://github.com/arvtrn3389/djy/blob/master/gb/21/6/30/n13059029.md#1">【远见快评】中共百年习犯大忌 普京释重大信息</a></li>
-<li><a href="https://github.com/arvtrn3389/djy/blob/master/gb/21/7/1/n13060108.md#1">习近平对台发强硬信号 台湾回应 国际关注</a></li>
-<li><a href="https://github.com/arvtrn3389/djy/blob/master/gb/21/7/1/n13061298.md#1">大陆记者吐槽中共七一庆典如恐怖片</a></li>
-<li><a href="https://github.com/arvtrn3389/djy/blob/master/gb/21/7/1/n13061793.md#1">古天乐大陆机场被搜身 安检人员表情引关注</a></li>
-<li><a href="https://github.com/arvtrn3389/djy/blob/master/gb/21/7/2/n13063386.md#1">刚完成产前筛检 台女星小甜甜今产下女娃</a></li>
-<li><a href="https://github.com/arvtrn3389/djy/blob/master/gb/21/7/1/n13061547.md#1">“终有一天会完” 杜汶泽呛声中共百年党庆</a></li>
-<li><a href="https://github.com/arvtrn3389/djy/blob/master/gb/21/6/30/n13059084.md#1">周杰伦香港演唱会四度延期 拟申请吉尼斯纪录</a></li>
-<li><a href="https://github.com/arvtrn3389/djy/blob/master/gb/21/7/1/n13060072.md#1">庾澄庆携手厂商 送500万防疫物资给长照机构</a></li>
-<li><a href="https://github.com/arvtrn3389/djy/blob/master/gb/21/7/1/n13061176.md#1">4招伸展操 每天10秒矫正姿势 全身肌肉变柔软</a></li>
-<li><a href="https://github.com/arvtrn3389/djy/blob/master/gb/21/6/30/n13058574.md#1">Delta变种3大危险性！新症状、疫苗保护力一次看</a></li>
-<li><a href="https://github.com/arvtrn3389/djy/blob/master/gb/21/7/2/n13062919.md#1">美国载有一家五口的汽车 连续遭雷击三次</a></li>
-<li><a href="https://github.com/arvtrn3389/djy/blob/master/gb/21/6/30/n13058801.md#1">抗疫灵丹就在你脚下！接地有助改善新冠</a></li>
-<li><a href="https://github.com/arvtrn3389/djy/blob/master/gb/21/7/1/n13060147.md#1">失踪小狗自行返家 用鼻子按门铃告诉主人</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/14/n13576716.md#1">【百年真相】亲历者揭秘“1952细菌战”真相</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/25/n13605590.md#1">【未解之谜】地球磁极倒转进行中??</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13610168.md#1">【神韵作品】唐瑞讲故事｜朗读｜小熊维尼第一章</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/22/n13597113.md#1">【百年真相】现代文字狱 胡风如何成了反革命？</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/17/n13582752.md#1">【奇事】两位卜算大师看出对方死期 但两人皆无法避过</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13614863.md#1">《梁祝》小提琴协奏曲</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/2/n13616638.md#1">【十字路口】蓬佩奥到访台湾意义重大？</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/2/n13615200.md#1">吴明德：中共暗撑俄侵乌 恐成国际大输家</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/26/n13607661.md#1">【更新2.27】乌总统：接下来24小时至关重要</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13610320.md#1">乌克兰用无人机摧毁俄导弹系统 视频曝光</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609576.md#1">俄银行被切断SWIFT系统 中共角色更尴尬</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609572.md#1">纳豆或暂退萤光幕一年 经纪人曝他最新病况</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609465.md#1">看海狮资料一目十行过目不忘 杨幂展超强记忆力</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13614888.md#1">赴韩拍戏皮肤长满红斑 范冰冰素颜照吓坏网友</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13612216.md#1">港星吴孟达过世一周年 长眠大马原因曝光</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13614510.md#1">香港TVB艺人祝文君罹癌离世 终年55岁</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13612112.md#1">更强Omicron变种出现？致病性、传播力一次看</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/23/n13599631.md#1">疫苗、口罩难结束疫情 这一件事或成关键</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/26/n13607140.md#1">睡眠十大好处 提高脑力、抗衰老都在内</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13608014.md#1">多吃橙色食物 不只护眼 还有这些强大好处</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13613932.md#1">【健康1+1】染Omicron出现脑雾 一方法2周解除</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/arvtrn3389/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/arvtrn3389/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/21/7/3/n13065253.htm">【名家专栏】中共精心策划的谎言和收买</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/yirpaj3429/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/yirpaj3429/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/21/7/3/n13065253.htm">【名家专栏】中共精心策划的谎言和收买</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/arvtrn3389/djy/blob/master/gb/21/7/3/n13065253.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/arvtrn3389/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/arvtrn3389/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/arvtrn3389/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/arvtrn3389/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/arvtrn3389/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/arvtrn3389/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/arvtrn3389/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/arvtrn3389/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/arvtrn3389/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/arvtrn3389/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/arvtrn3389/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/arvtrn3389/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/arvtrn3389/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/arvtrn3389/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/arvtrn3389/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/arvtrn3389/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/arvtrn3389/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/arvtrn3389/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/arvtrn3389/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/arvtrn3389/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/arvtrn3389/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/arvtrn3389/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/arvtrn3389/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/arvtrn3389/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/arvtrn3389/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/arvtrn3389/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/arvtrn3389/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/arvtrn3389/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/arvtrn3389/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/arvtrn3389/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/arvtrn3389/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/arvtrn3389/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/arvtrn3389/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/arvtrn3389/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/arvtrn3389/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/arvtrn3389/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/arvtrn3389/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/arvtrn3389/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/arvtrn3389/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/arvtrn3389/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/arvtrn3389/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/arvtrn3389/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/arvtrn3389/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/arvtrn3389/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/arvtrn3389/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/arvtrn3389/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/arvtrn3389/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/arvtrn3389/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/yirpaj3429/djy/blob/master/gb/21/7/3/n13065253.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/yirpaj3429/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yirpaj3429/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/yirpaj3429/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/yirpaj3429/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/yirpaj3429/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yirpaj3429/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/yirpaj3429/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yirpaj3429/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/yirpaj3429/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yirpaj3429/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/yirpaj3429/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yirpaj3429/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/yirpaj3429/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yirpaj3429/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/yirpaj3429/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yirpaj3429/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/yirpaj3429/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yirpaj3429/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/yirpaj3429/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yirpaj3429/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/yirpaj3429/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yirpaj3429/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/yirpaj3429/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yirpaj3429/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/yirpaj3429/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yirpaj3429/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/yirpaj3429/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yirpaj3429/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/yirpaj3429/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yirpaj3429/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/yirpaj3429/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yirpaj3429/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/yirpaj3429/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yirpaj3429/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/yirpaj3429/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yirpaj3429/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/yirpaj3429/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yirpaj3429/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/yirpaj3429/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yirpaj3429/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/yirpaj3429/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yirpaj3429/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/yirpaj3429/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yirpaj3429/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/yirpaj3429/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yirpaj3429/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/yirpaj3429/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yirpaj3429/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
